fixed letter spacing for b and th tags

--- a/import/css/simple.css
+++ b/import/css/simple.css
@@ -56,7 +56,8 @@ body {
 }
 
 b, th {
-	font-weight: 700;
+    font-weight: 700;
+    letter-spacing: 0px;
 }
 
 a, a:visited {
