--- a/import/css/styles.css
+++ b/import/css/styles.css
@@ -61,7 +61,8 @@ body {
 }
 
 b, th {
-	font-weight: 700;
+    font-weight: 700;
+    letter-spacing: 0px;
 }
 
 a, a:visited {
